<resources>
    <string name="app_name">Movies</string>
    <string name="add_button_text">Add Movies to DB</string>
    <string name="search_movies_button_text">Search For Movies</string>
    <string name="search_movies_on_web_button_text">Web Service Search</string>
    <string name="search_actors_button_text">Search For Actors</string>
    <string name="retrieve_movie_button_text">Retrieve Movie</string>
    <string name="save_movie_button_text">Save Movie</string>
    <string name="search_place_holder_text">Search Movie</string>
    <string name="search_db_place_holder_text">Search By Actors In Database</string>
    <string name="search_web_place_holder_text">Search By Title In Web</string>
    <string name="search_by_actor_button_text">Search</string>
    <string name="no_results_found_text">No Results Found</string>
</resources>