<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".SearchActorsActivity">

    <EditText
        android:id="@+id/txt_search_db_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_db_place_holder_text"
        android:autofillHints="username" />

    <Button
        android:id="@+id/btn_search_by_actor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_search_db_text"
        android:layout_marginTop="10dp"
        android:text="@string/search_by_actor_button_text"/>

    <LinearLayout
        android:id="@+id/loading_layout_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_below="@id/btn_search_by_actor"/>

    <TextView
        android:id="@+id/txt_no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/no_results_found_text"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>