<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SearchMovieActivity">

    <EditText
        android:id="@+id/txt_search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_place_holder_text"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_search_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btn_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_movie_button_text"/>

        <Button
            android:id="@+id/btn_save_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/save_movie_button_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_below="@id/button_layout">
        <TextView
            android:id="@+id/txt_search_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

</RelativeLayout>